--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <div id="main" class="bg-gray-200 mx-6 rounded-md">
         <div class="text-center">
-            <h1 id="title" class="">Dr. Norman Borlaug</h1>
-            <p >The man who saved a billion lives</p>
+            <h1 id="title" class="font-bold text-4xl py-4">Dr. Norman Borlaug</h1>
+            <p class="py-2" >The man who saved a billion lives</p>
         </div>
         <div id="img-div" class="text-center bg-white">
             <div class="flex justify-center">
@@ -61,6 +61,22 @@
              
 
                 </div>
+
+                <div class="pt-12 italic py-2">
+                    <div class="text-left space-y-6">
+                    <p class="flex justify-center">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <h3 class="font-bold text-xl py-2 text-center">If you have time, you should read <br>more about this incredible human being on his</h3>
+
+                    <a id="tribute-link" href="en.wikipedia.org" class="text-blue-500 underline" target="_blank">wikipedia</a>
+                </div>
+
+                
+
+
 
             </div>
         </section>
